infrastructure/k8s/observability/ingressroute-grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-grafana
  namespace: medicore-monitoring-env-dev
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`grafana.localhost`)
    kind: Rule
    services:
    - name: medicore-observability-grafana
      port: 80
