infrastructure/k8s/observability/ingressroute-prometheus.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-prometheus
  namespace: medicore-monitoring-env-dev
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`prometheus.localhost`)
    kind: Rule
    services:
    - name: medicore-observability-kub-prometheus
      port: 9090
